alignment issue fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1599,7 +1599,7 @@
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 2em 0 2em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -2846,7 +2846,7 @@
 		/* Header */
 
 			#header {
-				padding: 6em 3em 3em 3em;
+				/*padding: 6em 3em 3em 3em;*/
 				width: 30%;
 			}
 
@@ -2861,7 +2861,7 @@
 		/* Footer */
 
 			#footer {
-				padding: 0 3em 5em 3em;
+				/*padding: 0 3em 5em 3em;*/
 				width: 30%;
 			}
 
